# ccsm

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  MANIFEST.in  Makefile  Makefile.am  NEWS  README.md  VERSION  bsettings-bindings.pc.in  ccs-bindings.pc.in  ccsm  ccsm.appdata.xml  ccsm.appdata.xml.in  ccsm.desktop  ccsm.desktop.in  ccsm.in  configure.ac  setup.py
ccm/: Conflicts.py  Constants.py.in  Pages.py  Settings.py  Utils.py  Widgets.py  Window.py  __init__.py
images/: Makefile.am
misc/: Makefile.am  ccsm.desktop
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  ar.po  as.po  be.po  bg.po  bn.po  bn_IN.po  ca.po  ccsm.pot  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  ko.po  md.po  ml_IN.po  mnk.po  nb.po  nl.po  or.po  pa.po  (+13 more)
python/: Makefile.am  bset  bset-new  bsettings.pyx  ccs.pyx
src/: Makefile.am  ccsm
src/ccm/: Constants.py.in  Makefile.am
