## Process this file with automake to produce Makefile.in
iconsdir = $(datadir)/icons/hicolor/scalable/apps
icons_DATA = ccsm.svg

imagesdir = $(datadir)/ccsm/images
images_DATA = \
		plugin-_.svg			\
		plugin-3d.svg		\
		plugin-animation.svg	\
		plugin-addhelper.svg	\
		plugin-annotate.svg	\
		plugin-bench.svg		\
		plugin-blurfx.svg	   \
		plugin-blur.svg		 \
		plugin-bs.svg		   \
		plugin-capture.svg	  \
		plugin-clone.svg		\
		plugin-crashhandler.svg \
		plugin-cube.svg		 \
		plugin-dbus.svg		 \
		plugin-debug.svg		\
		plugin-decoration.svg   \
		plugin-fade.svg		 \
		plugin-group.svg	\
		plugin-inputzoom.svg	\
		plugin-jpeg.svg		\
		plugin-minimize.svg	 \
		plugin-miniview.svg	 \
		plugin-move.svg		 \
		plugin-neg.svg		  \
		plugin-opacify.svg	\
		plugin-place.svg		\
		plugin-plane.svg		\
		plugin-png.svg		  \
		plugin-put.svg		  \
		plugin-fake.svg   \
		plugin-reflection.svg   \
		plugin-resize.svg	   \
		plugin-rotate.svg	   \
		plugin-scale.svg		\
		plugin-screenshot.svg   \
		plugin-showdesktop.svg  \
		plugin-snow.svg		 \
		plugin-splash.svg	   \
		plugin-state.svg		\
		plugin-svg.svg		  \
		plugin-switcher.svg	 \
		plugin-thumbnail.svg	\
		plugin-trailfocus2.svg  \
		plugin-water.svg		\
		plugin-wall.svg			\
		plugin-wobbly.svg	   \
		plugin-zoom.svg \
		plugin-fadeDesktop.svg \
		plugin-text.svg \
		plugin-snap.svg \
		plugin-tile.svg \
		category-accessibility.svg \
		category-effects.svg \
		category-image_loading.svg \
		category-general_options.svg \
		category-desktop.svg \
		category-extras.svg \
		category-development.svg \
		category-key_bindings.svg \
		category-profiles.svg \
		category-window_management.svg 

EXTRA_DIST = $(images_DATA) $(icons_DATA)
