## Process this file with automake to produce Makefile.in
iconsdir = $(datadir)/icons/hicolor/scalable/apps
icons_DATA = ccsm.svg

imagesdir = $(datadir)/ccsm/images
images_DATA = \
	category-accessibility.svg      \
	category-desktop.svg    \
	category-development.svg        \
	category-effects-boxed.svg      \
	category-effects.svg    \
	category-extras.svg     \
	category-general.svg    \
	category-image_loading.svg      \
	category-key_bindings.svg       \
	category-profiles.svg   \
	category-uncategorized.svg   \
	category-window_management.svg  \
	plugin-3d.svg   \
	plugin-addhelper.svg    \
	plugin-animation.svg    \
	plugin-annotate.svg     \
	plugin-bench.svg        \
	plugin-blur.svg \
	plugin-bs.svg   \
	plugin-capture.svg      \
	plugin-clone.svg        \
	plugin-core.svg \
	plugin-crashhandler.svg \
	plugin-cube.svg \
	plugin-dbus.svg \
	plugin-debug.svg        \
	plugin-decoration.svg   \
	plugin-extrawm.svg \
	plugin-expo.svg \
	plugin-fade.svg \
	plugin-fadedesktop.svg  \
	plugin-fakeargb.svg \
	plugin-fs.svg \
	plugin-group.svg        \
	plugin-imgjpeg.svg      \
	plugin-mblur.svg   \
	plugin-minimize.svg     \
	plugin-miniview.svg     \
	plugin-move.svg \
	plugin-neg.svg  \
	plugin-opacify.svg      \
	plugin-place.svg        \
	plugin-plane.svg        \
	plugin-png.svg  \
	plugin-put.svg  \
	plugin-reflex.svg       \
	plugin-resize.svg       \
	plugin-ring.svg \
	plugin-rotate.svg       \
	plugin-scale.svg        \
	plugin-schemep.svg      \
	plugin-screencasting.svg \
	plugin-screenshot.svg   \
	plugin-showdesktop.svg  \
	plugin-snap.svg \
	plugin-snow.svg \
	plugin-splash.svg       \
	plugin-state.svg        \
	plugin-svg.svg  \
	plugin-switcher.svg     \
	plugin-text.svg \
	plugin-thumbnail.svg    \
	plugin-tile.svg \
	plugin-trailfocus.svg   \
	plugin-video.svg        \
	plugin-wall.svg \
	plugin-water.svg        \
	plugin-wobbly.svg       \
	plugin-zoom.svg 

EXTRA_DIST = $(images_DATA) $(icons_DATA)
