## Process this file with automake to produce Makefile.in
svgiconsdir = $(datadir)/icons/hicolor/scalable/apps
svgicons_DATA = ccsm.svg

pngiconsdir = $(datadir)/pixmaps
pngicons_DATA = ccsm.png

imagesdir = $(datadir)/ccsm/images
images_DATA = \
	category-accessibility.svg      \
	category-desktop.svg    \
	category-effects-boxed.svg      \
	category-effects.svg    \
	category-extras.svg     \
	category-general.svg    \
	category-image_loading.svg      \
	category-key_bindings.svg       \
	category-profiles.svg   \
	category-search.svg \
	category-uncategorized.svg   \
	category-utility.svg \
	category-window_management.svg  \
	plugin-3d.svg   \
	plugin-addhelper.svg    \
	plugin-animation.svg    \
	plugin-annotate.svg     \
	plugin-bench.svg        \
	plugin-blur.svg \
	plugin-bs.svg   \
	plugin-capture.svg      \
	plugin-clone.svg        \
	plugin-core.svg \
	plugin-colorfilter.svg \
	plugin-crashhandler.svg \
	plugin-cube.svg \
	plugin-cubereflex.svg \
	plugin-dbus.svg \
	plugin-debug.svg        \
	plugin-decoration.svg   \
	plugin-extrawm.svg \
	plugin-expo.svg \
	plugin-fade.svg \
	plugin-fadedesktop.svg  \
	plugin-fakeargb.svg \
	plugin-firepaint.svg \
	plugin-fs.svg \
	plugin-gears.svg \
	plugin-glib.svg \
	plugin-group.svg        \
	plugin-imgjpeg.svg      \
	plugin-inotify.svg \
	plugin-mblur.svg   \
	plugin-minimize.svg     \
	plugin-move.svg \
	plugin-mswitch.svg \
	plugin-neg.svg  \
	plugin-opacify.svg      \
	plugin-place.svg        \
	plugin-plane.svg        \
	plugin-png.svg  \
	plugin-put.svg  \
	plugin-reflex.svg       \
	plugin-regex.svg \
	plugin-resize.svg       \
	plugin-resizeinfo.svg \
	plugin-ring.svg \
	plugin-rotate.svg       \
	plugin-scale.svg        \
	plugin-scaleaddon.svg \
	plugin-scalefilter.svg \
	plugin-schemep.svg      \
	plugin-screencasting.svg \
	plugin-screenshot.svg   \
	plugin-showdesktop.svg  \
	plugin-snap.svg \
	plugin-snow.svg \
	plugin-splash.svg       \
	plugin-state.svg        \
	plugin-svg.svg  \
	plugin-switcher.svg     \
	plugin-text.svg \
	plugin-thumbnail.svg    \
	plugin-tile.svg \
	plugin-trailfocus.svg   \
	plugin-video.svg        \
	plugin-unknown.svg \
	plugin-wall.svg \
	plugin-wallpaper.svg \
	plugin-water.svg        \
	plugin-winrules.svg \
	plugin-wobbly.svg       \
	plugin-zoom.svg 

EXTRA_DIST = $(images_DATA) $(svgicons_DATA) $(pngicons_DATA)
